2007-12-04  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/metadatamuxjpeg.c: (metadatamux_wrap_chunk),
	(metadatamux_jpeg_lazy_update):
	* ext/metadata/metadataparsejpeg.c: (metadataparse_jpeg_parse),
	(metadataparse_jpeg_reading):
	  Now compiles even when libiptc is missing.

2007-12-04  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/gstmetadataparse.h:
	* ext/metadata/metadata.c:
	* ext/metadata/metadata.h:
	* ext/metadata/metadatamuxjpeg.c:
	* ext/metadata/metadatamuxjpeg.h:
	* ext/metadata/metadatamuxpng.c:
	* ext/metadata/metadatamuxpng.h:
	  Fixed element properties and now muxer writes to png also.

2007-12-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/Makefile.am:
	* gst/mpegtsparse/mpegtspacketizer.c:
	* gst/mpegtsparse/mpegtsparse.c:
	Remove signals for pat, pmt, nit, eit, sdt. Replace with bus
	messages.
	* sys/dvb/dvbbasebin.c:
	Instead of attaching to signals, use the bus messages.
	Also fix up so the dvbsrc starts only outputting the info tables
	like PAT, CAT, NIT, SDT, EIT instead of the whole ts.

2007-12-03  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadataexif.h:
	* ext/metadata/metadataiptc.c:
	* ext/metadata/metadataiptc.h:
	* ext/metadata/metadatamuxjpeg.c:
	* ext/metadata/metadataxmp.c:
	* ext/metadata/metadataxmp.h:
	  Muxer writes (in jpeg only) whole IPTC chunk sent as tag. Muxer
	  implemets GstTagSetter interface.

2007-12-03  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/rfbdecoder.c:
		Should fix the 64-bit build

2007-11-30  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/gstmetadataparse.h:
	* ext/metadata/metadataexif.c: